--- a/DockerFile
+++ b/DockerFile
@@ -27,5 +27,6 @@ RUN ARCH=$(uname -m) &&\
 
 # apt-get autoremove -y &&\
 
-# build: docker build -t c-develop-docker:latest .
+# build: docker build -t finsss/c-develop-docker:latest .
 # deploy: docker-compose up -d
+# push: docker push finsss/c-develop-docker:latest 
