--- a/DockerFile
+++ b/DockerFile
@@ -7,7 +7,7 @@ RUN ARCH=$(uname -m) &&\
     apt-get update &&\
     apt-get upgrade -y &&\
     # gcc wget g++ make python3 pip
-    apt-get install -y wget gcc g++ make git python3 python3-pip &&\
+    apt-get install -y wget gcc g++ gdb make git python3 python3-pip &&\
     mkdir /temp &&\
     # install cmake
     wget -P /temp https://github.com/Kitware/CMake/releases/download/v${CMKAE_VERSION}/cmake-${CMKAE_VERSION}-linux-x86_64.sh &&\
